--- a/project/package.json
+++ b/project/package.json
@@ -10,12 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.13.0",
-    "@nuxtjs/tailwindcss": "^6.12.1",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.1",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
+    "axios": "^1.10.0",
+    "nuxt": "^3.13.0",
     "vue-toastification": "^2.0.0-rc.5"
   }
 }
